--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -1,30 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>login</title>
-    <script
-    src="https://cdn.socket.io/3.1.1/socket.io.min.js"
-    integrity="sha384-gDaozqUvc4HTgo8iZjwth73C6dDDeOJsAgpxBcMpZYztUfjHXpzrpdrHRdVp8ySO"
-    crossorigin="anonymous"
-  ></script>
-  </head>
+<%- include('header') -%>
 
-  <body>
-    <div class="content">
-      <h1>login page</h1>
-      <form action="/login" method="post">
-        <input type="text" name="username">
-        <input type="password" name="password">
-        <button type="submit">login</button>
-      </form>
-      <a href="/">home</a>
-    </div>
-    <!-- SOCKET IO  -->
-    <!-- <script src="/socket.io/socket.io.js" defer></script> -->
-    <!-- <script src="./js/main.js" defer></script> -->
+<div class="content">
+  <h1>login page</h1>
+  <form action="/login" method="post">
+    <input type="text" name="username" />
+    <input type="password" name="password" />
+    <button type="submit">login</button>
+  </form>
+  <a href="/">home</a><br>
+  <a href="/register">register</a>
+</div>
 
-
-  </body>
-</html>
+<%- include('footer') -%>
