--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -2,9 +2,11 @@
 
 <div class="content">
   <h1>login page</h1>
-  <form action="/login" method="post">
-    <input type="text" name="username" />
-    <input type="password" name="password" />
+  <form action="/login" method="post"><br>
+    <label for="email">email</label><br>
+    <input type="text" name="email" /><br>
+    <label for="password">password</label><br>
+    <input type="password" name="password" /><br>
     <button type="submit">login</button>
   </form>
   <a href="/">home</a><br>
