--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,3 +10,12 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <body>
+    <div>
+      <ul>
+        <li><a href="/">home</a></li>
+        <li><a href="/login">login</a></li>
+        <li><a href="/register">register</a></li>
+        <li><a href="/users">users</a></li>
+      </ul>
+    </div>
