--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
     <script
       src="https://cdn.socket.io/3.1.1/socket.io.min.js"
       integrity="sha384-gDaozqUvc4HTgo8iZjwth73C6dDDeOJsAgpxBcMpZYztUfjHXpzrpdrHRdVp8ySO"
@@ -12,10 +18,19 @@
   </head>
   <body>
     <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">socket chat</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="/">home</a></li>
+              <li class="nav-item"><a class="nav-link" href="/login">login</a></li>
+              <li class="nav-item"><a class="nav-link" href="/register">register</a></li>
+              <li class="nav-item"><a class="nav-link" href="/users">users</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/login">login</a></li>
-        <li><a href="/register">register</a></li>
-        <li><a href="/users">users</a></li>
       </ul>
     </div>
