--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,9 +1,9 @@
 <%- include('header') -%>
-<div class="content">
+<div class="p-4">
   <h1>Users</h1>
-  <ul>
+  <ul class="list-group">
     <% users.forEach(function(user){ %>
-    <li><a href="/chat?userid=<%- user.id %>"><%- user.username %></a></li>
+    <li class="list-group-item"><a href="/chat?userid=<%- user.id %>"><%- user.username %></a></li>
     <% }); %>
   </ul>
 </div>
