--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,13 +19,14 @@
   <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="/">socket chat</a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="/">home</a></li>
               <li class="nav-item"><a class="nav-link" href="/login">login</a></li>
               <li class="nav-item"><a class="nav-link" href="/register">register</a></li>
+              <li class="nav-item"><a class="nav-link" href="/logout">logout</a></li>
               <li class="nav-item"><a class="nav-link" href="/users">users</a></li>
             </ul>
           </div>
@@ -34,3 +35,4 @@
       <ul>
       </ul>
     </div>
+    <div class="container">
