--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,18 +21,34 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="/">socket chat</a>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div
+            class="collapse navbar-collapse d-flex justify-content-end"
+            id="navbarNav"
+          >
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="/">home</a></li>
-              <li class="nav-item"><a class="nav-link" href="/login">login</a></li>
-              <li class="nav-item"><a class="nav-link" href="/register">register</a></li>
-              <li class="nav-item"><a class="nav-link" href="/logout">logout</a></li>
-              <li class="nav-item"><a class="nav-link" href="/users">users</a></li>
+              <% if(authUser) { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users">users</a>
+              </li>
+
+              <% } else { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/register">register</a>
+              </li>
+
+              <% } %>
             </ul>
           </div>
         </div>
       </nav>
-      <ul>
-      </ul>
+      <ul></ul>
     </div>
-    <div class="container">
+    <div class="container"></div>
+  </body>
+</html>
