--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,7 +1,13 @@
 <%- include('header') -%>
 <div class="p-4">
   <h3><%- user.username %></h3>
-  <ul id="messages"></ul>
+  <ul id="messages" class="list-group mb-3">
+    <% for(let i = 0; i < messages.length; i++) { %>
+      <li class="list-group-item">
+      <%= (authUser.id == messages[i].sender ? 'You':  user.username) + ': ' + messages[i].message%>
+      </li>
+    <% } %>
+  </ul>
   <form onsubmit="return sendMessage()">
     <input class="form-control" id="message" type="text" name="message" /><br />
     <button class="btn btn-success" type="submit">send</button>
