--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,11 +21,8 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="/">socket chat</a>
-          <div
-            class="collapse navbar-collapse d-flex justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" style="margin-left: auto;">
               <% if(authUser) { %>
               <li class="nav-item">
                 <a class="nav-link" href="/logout">logout</a>
@@ -44,11 +41,10 @@
 
               <% } %>
             </ul>
+            <div style="margin-left: 10px;"><%= authUser.username %></div>
           </div>
         </div>
       </nav>
       <ul></ul>
     </div>
-    <div class="container"></div>
-  </body>
-</html>
+    <div class="container">
